# brain_code

./: .gitignore  README.md  START_HERE.md  VERSION_MAP.md  requirements-hybrid-controller.txt  requirements-hybrid-runtime-optional.txt  requirements-jetmax-robot-python.txt  run_fake_robot_server.py  run_hybrid_real.py  run_hybrid_sim_gui.py
01_MI/: MI_Classification_Outline.md  README.md
02_SSVEP/: README.md  START_ASYNC_SSVEP_BENCHMARK_COM4.cmd  START_ASYNC_SSVEP_COM4.cmd  START_ASYNC_SSVEP_ONLINE_COM4.cmd  START_FBCCA_REALTIME_UI.py  START_MODEL_EVALUATION_UI.py  START_SSVEP_DATA_COLLECTION_UI.py  START_SSVEP_SERVER_TRAIN.py
03_RobotArm_Control/: README.md
04_Communication_And_Integration/: README.md
05_Vision_Block_Recognition/: README.md
docs/: Hybrid_Controller_启动与部署说明.md  JetMax_圆柱坐标改造说明.md  JetMax_真机联动说明.md  JetMax视觉链路优化手册.md  README.md  SYSTEM_STATUS_REPORT_2026-04-06.md  主线入口与代码地图.md  开发日志.md  接口协议草案.md
hybrid_controller/: .gitignore  README.md  START_HYBRID_REAL.cmd  START_HYBRID_SIM.cmd  START_HYBRID_SIM_GUI.cmd  __init__.py  app.py  app_projection.py  app_robot_commands.py  config.py  coordinators.py  cylindrical.py  (+6 more)
hybrid_controller/robot/ros_pkg/hybrid_controller_ros/: CMakeLists.txt  README.md  package.xml
hybrid_controller/robot/ros_pkg/hybrid_controller_ros/msg/: CylindricalTeleop.msg  RobotState.msg
hybrid_controller/robot/ros_pkg/hybrid_controller_ros/scripts/: hybrid_controller_runtime_node.py
hybrid_controller/robot/ros_pkg/hybrid_controller_ros/srv/: GetPickTuning.srv  MoveCyl.srv  PickCyl.srv  PickWorld.srv  SetPickTuning.srv
(+472 files in other folders)
