<?xml version="1.0"?>
<package format="2">
  <name>hybrid_controller_ros</name>
  <version>0.1.0</version>
  <description>ROS transport layer and teleop runtime for the hybrid controller.</description>
  <maintainer email="local@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
